coding done for: Buttons & Utility Classes [31:00].

--- a/Coursework/index.html
+++ b/Coursework/index.html
@@ -36,7 +36,7 @@
                         <a href="#">Blog</a>
                     </li>
                     <li>
-                        <a class="btn btn-light" href="#">
+                        <a class="btn btn-dark" href="#"> <!--by chaning cloror: btn-dark to primary -->
                             <i class="fas fa-user"></i> Log In
                         </a>
                     </li>
@@ -45,6 +45,60 @@
 
         </div>
     </nav>
+    <!-- Hero -->
+    <section class="hero">
+        <div class="container">
+            <div class="hero-content">
+                <h1 class="hero-heading text-xxl">
+                    A powerful solutuion to grow your startup. Fast!
+                </h1>
+                <p class="hero-text">
+                    Organize, collaborate, and track progress
+                    seamlessly with our
+                    one-stop-shop startup gwrowth tool.
+                </p>
+                <div class="hero-buttons">
+                    <a href="#" class="btn btn-super-dark">Get Started
+                    </a>
+
+                    <a href="#" class="btn btn-dark"><i class="fas fa-laptop"></i>
+                         Book a Demo
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Video Section -->
+     <section class="video bg-black">
+        <div class="container-sm">
+            <h2 class="video-heading text-xl text-center">
+                See how it works and get started in less than 
+                2 minutes
+            </h2>
+            <div class="video-content">
+                <a href="#">
+                    <img src="images/video-preview.png" alt="video"
+                    class="video-preview" />
+                </a>
+
+                <a href="" class="btn btn-dark">Get Started</a>
+            </div>
+        </div>
+     </section>
+
+      <!-- Testimonials -->
+      <section class="testimonials bg-dark"> <!-- bg-dark in the video but this looks better-->
+        <div class="container">
+            <h3 class="testimonials-heading text-xl">
+                Don't just take our word for it, see the success
+                stories from businesses just like yours.
+            </h3>
+
+        </div>
+      </section>   
+    
+
     <script src="js/main.js"></script>
 </body>
 </html>
