--- a/Coursework/index.html
+++ b/Coursework/index.html
@@ -76,7 +76,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-heading text-xxl">
-                    A powerful solutuion to grow your startup. Fast!
+                    A powerful solution to grow your startup. Fast!
                 </h1>
                 <p class="hero-text">
                     Organize, collaborate, and track progress
