Mobile menu and hambuerger button added. Finished Image rights section with fun animation.

--- a/Project/rapid.html
+++ b/Project/rapid.html
@@ -17,35 +17,31 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.3.2/css/flag-icons.min.css" />
 </head>
 
-<!-- Magnus: Stefan64, Wikimedia Commons, CC BY-SA 3.0 (https://creativecommons.org/licenses/by-sa/3.0/deed.en)  https://commons.wikimedia.org/wiki/File:MagnusCarlsen24.jpg-->
-<!--Hikaru: Andreas Kontokanis, Flickr, CC BY-SA 2.0 (https://creativecommons.org/licenses/by-sa/2.0/)-->
-<!-- Fabiano: Andreas Kontokanis, Flickr, CC BY-SA 2.0 (https://creativecommons.org/licenses/by-sa/2.0/deed.en)-->
+<!--  Magnus: Stefan64, Wikimedia Commons, CC BY-SA 3.0 (https://creativecommons.org/licenses/by-sa/3.0/deed.en)  https://commons.wikimedia.org/wiki/File:MagnusCarlsen24.jpg-->
+<!--  Hikaru: Andreas Kontokanis, Flickr, CC BY-SA 2.0 (https://creativecommons.org/licenses/by-sa/2.0/)-->
+<!--  Fabiano: Andreas Kontokanis, Flickr, CC BY-SA 2.0 (https://creativecommons.org/licenses/by-sa/2.0/deed.en)-->
 
-<!--Arjun: Frans Peeters CC BY-SA 2.0 (https://creativecommons.org/licenses/by-sa/2.0/) -->
-<!--Arjun: v2 Stefan64, Wikimedia Commons, CC CC BY-SA 3.0 (https://creativecommons.org/licenses/by-sa/3.0/deed.en) -->
+<!--  Arjun: Frans Peeters CC BY-SA 2.0 (https://creativecommons.org/licenses/by-sa/2.0/) -->
 
-<!-- Gukesh Frans: Peeters CC BY-SA 2.0 (https://creativecommons.org/licenses/by-sa/2.0/) -->
-<!-- Abdusattorov: Frans Peeters CC BY-SA 2.0 (https://creativecommons.org/licenses/by-sa/2.0/) -->
-<!-- Gukesh: Frans Peeters CC BY-SA 2.0 (https://creativecommons.org/licenses/by-sa/2.0/) -->
-<!-- Pragg:  Frans Peeters CC BY-SA 2.0 (https://creativecommons.org/licenses/by-sa/2.0/) https://www.flickr.com/photos/suspeeters/52638511795/sizes/w/-->
-<!-- Alireza: Stefan64, Wikimedia Commons, CC BY-SA 3.0 (https://creativecommons.org/licenses/by-sa/3.0/deed.en) -->
-<!-- Nepo: HiddenChessMaster123, Wikimedia Commons, CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/) https://commons.m.wikimedia.org/wiki/File:Nepomniachtchi_at_the_World_Blitz_2024_%28cropped%29.jpg --> 
+<!--   Gukesh Frans: Peeters CC BY-SA 2.0 (https://creativecommons.org/licenses/by-sa/2.0/) -->
+<!--   Abdusattorov: Frans Peeters CC BY-SA 2.0 (https://creativecommons.org/licenses/by-sa/2.0/) -->
+<!--   Gukesh: Frans Peeters CC BY-SA 2.0 (https://creativecommons.org/licenses/by-sa/2.0/) -->
+<!--   Pragg:  Frans Peeters CC BY-SA 2.0 (https://creativecommons.org/licenses/by-sa/2.0/) https://www.flickr.com/photos/suspeeters/52638511795/sizes/w/-->
+<!--   Alireza: Stefan64, Wikimedia Commons, CC BY-SA 3.0 (https://creativecommons.org/licenses/by-sa/3.0/deed.en) -->
+<!--   Nepo: HiddenChessMaster123, Wikimedia Commons, CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/) https://commons.m.wikimedia.org/wiki/File:Nepomniachtchi_at_the_World_Blitz_2024_%28cropped%29.jpg --> 
 
-<!-- Wei Yi: Frans Peeters, CC BY-SA 2.0 (https://creativecommons.org/licenses/by-sa/2.0/) https://www.flickr.com/photos/suspeeters/54275541445/sizes/m/-->
+<!--   Wei Yi: Frans Peeters, CC BY-SA 2.0 (https://creativecommons.org/licenses/by-sa/2.0/) https://www.flickr.com/photos/suspeeters/54275541445/sizes/m/-->
 
 
-<!--Rapid  -->
-<!--Ding: Frans Peeters, CC BY-SA 2.0 (https://creativecommons.org/licenses/by-sa/2.0/deed.en)-->
-<!-- Levon Aronian: Frans Peeters, CC BY-SA 2.0 https://creativecommons.org/licenses/by-sa/2.0/ -->
-<!-- Fedoseev: Frans Peeters CC BY-SA 2.0 (https://creativecommons.org/licenses/by-sa/2.0/)-->
+<!--Rapid  and Blitz-->
+<!--   Ding: Frans Peeters, CC BY-SA 2.0 (https://creativecommons.org/licenses/by-sa/2.0/deed.en)-->
+<!--   Levon Aronian: Frans Peeters, CC BY-SA 2.0 https://creativecommons.org/licenses/by-sa/2.0/ -->
+<!--  Fedoseev: Frans Peeters CC BY-SA 2.0 (https://creativecommons.org/licenses/by-sa/2.0/)-->
 <!--MVL: Lennart Ootes, Wikimedia Commons, CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/) -->
-<!-- Dubov: Stefan64, Wikimedia Commons, CC BY-SA 4.0 https://creativecommons.org/licenses/by-sa/4.0/  -->
-<!-- Wesey So: Frans Peeters CC BY-SA 2.0 https://creativecommons.org/licenses/by-sa/2.0/deed.en -->
+<!--    Dubov: Stefan64, Wikimedia Commons, CC BY-SA 4.0 https://creativecommons.org/licenses/by-sa/4.0/  -->
+<!--    Wesey So: Frans Peeters CC BY-SA 2.0 https://creativecommons.org/licenses/by-sa/2.0/deed.en -->
 <!-- Bortnyk: Anastasiyashevelevich, Wikimedia Commons, CC BY-SA 4.0(https://creativecommons.org/licenses/by-sa/4.0/deed.en)-->
 <!-- -->
-<!-- -->
-<!-- -->
-
 
 <body>
     <nav class="navbar">
@@ -81,6 +77,40 @@
                             <i class="fas fa-bolt-lightning"></i> Blitz
                         </a>
                     </li>
+                </ul>
+            </div>
+
+            <!-- Hamburger menu button-->
+            <button class="hamburger-button">
+                <div class="hamburger-line"></div>
+                <div class="hamburger-line"></div>
+                <div class="hamburger-line"></div>
+            </button>
+            <div class="mobile-menu">
+                <ul>
+                    <li>
+                        <a class="btn btn-coral" href="index.html"> <!--Change the button class not the icon class! -->
+                            <i class="fa-solid fas fa-house" ></i>Home        
+                        </a>
+                    
+                    </li>
+                    <li>
+                        <a class="btn btn-coral" href="classical.html">
+                            
+                            <i class="fa-solid fas fa-chess-board"></i>Classical
+                        </a>
+                    </li>
+                    <li>
+                        <a class="btn btn-pushed" href="rapid.html">
+                            <i class="fas fa-stopwatch"></i> Rapid
+                        </a>
+
+                    </li>
+                    <li>
+                        <a class="btn btn-coral" href="blittz.html">
+                            <i class="fas fa-bolt-lightning"></i> Blitz
+                        </a>
+                    </li>   
                 </ul>
             </div>
         </div>
@@ -541,8 +571,8 @@
                                 <div class="classical-card-body-info text-info"> 
                                     <p>
                                         <b>Volodar Murzin</b>   
-                                        won the 2024  World Rapid Chess Rapid Championship without losing a single game,
-                                        defeating several world's elite players, including <b>Hikaru Nakamura</b>, <b>Fabiano Caruana</b> and <b>Praggnanandhaa Rameshbabu</b> .
+                                        won the 2024 World Rapid Chess Championship without losing a single game,
+                                        defeating several world's elite players, including <b>Hikaru Nakamura</b>, <b>Fabiano Caruana</b> and <b>Praggnanandhaa Rameshbabu</b>.
                                         At just 18 years old, he bacame the second-youngest player ever to win the title surpassing <b>Daniil dubov's</b> 2018 record
                                         at age 22. He fell just short of breaking <b>Nodirbek Abdusattorov's</b> record, who won the title at age of 17 in 2021.
                                     </p>
@@ -614,7 +644,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div>
-                    <div class="card">
+                    <div class="card" style="color: black;">
                         <h4>We need ideas and feedback!</h4>
 
                         <p>
@@ -635,7 +665,7 @@
                                 <u>About Us</u>
                                 </h4>
                             </div> 
-                            <div class="about-us-group-body close">
+                            <div class="about-us-group-body close" style="color: black;"> 
                                 <p>
                                     Top Chess Players is a website dedicated to listing
                                     elite chess players in each time format. We provide
@@ -648,12 +678,12 @@
                     </div> 
                 </li> 
 
-                <li>
-                    <div class="image-rights" href="index.html">
+                <div class="image-rights">
+                    <a href="images.html">
                         <h4><u>Image Rights</u></h4>  
                         <!--<i class="fa-solid fas fa-image"></i>-->
-                    </div>
-                </li> 
+                    </a>
+                </div>  
 
                 </ul> 
 
