--- a/Project/classical.html
+++ b/Project/classical.html
@@ -85,6 +85,39 @@
                     </li>
                 </ul>
             </div>
+            <!-- Hamburger menu button-->
+            <button class="hamburger-button">
+                <div class="hamburger-line"></div>
+                <div class="hamburger-line"></div>
+                <div class="hamburger-line"></div>
+            </button>
+            <div class="mobile-menu">
+                <ul>
+                    <li>
+                        <a class="btn btn-coral" href="index.html"> <!--Change the button class not the icon class! -->
+                            <i class="fa-solid fas fa-house" ></i>Home        
+                        </a>
+                    
+                    </li>
+                    <li>
+                        <a class="btn btn-pushed" href="classical.html">
+                            
+                            <i class="fa-solid fas fa-chess-board"></i>Classical
+                        </a>
+                    </li>
+                    <li>
+                        <a class="btn btn-coral" href="rapid.html">
+                            <i class="fas fa-stopwatch"></i> Rapid
+                        </a>
+
+                    </li>
+                    <li>
+                        <a class="btn btn-coral" href="blittz.html">
+                            <i class="fas fa-bolt-lightning"></i> Blitz
+                        </a>
+                    </li>   
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -540,7 +573,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div>
-                    <div class="card">
+                    <div class="card" style="color: black;">
                         <h4>We need ideas and feedback!</h4>
 
                         <p>
@@ -561,7 +594,7 @@
                                 <u>About Us</u>
                                 </h4>
                             </div> 
-                            <div class="about-us-group-body close">
+                            <div class="about-us-group-body close" style="color: black;">
                                 <p>
                                     Top Chess Players is a website dedicated to listing
                                     elite chess players in each time format. We provide
@@ -574,12 +607,12 @@
                     </div> 
                 </li> 
 
-                <li>
-                    <div class="image-rights" href="index.html">
+               <div class="image-rights">
+                    <a href="images.html">
                         <h4><u>Image Rights</u></h4>  
                         <!--<i class="fa-solid fas fa-image"></i>-->
-                    </div>
-                </li> 
+                    </a>
+                </div>  
 
                 </ul> 
 
