--- a/images.html
+++ b/images.html
@@ -131,7 +131,7 @@
             </div>
             <div class="subheading">
                 <h3>The website contains Creative Commons
-                    images found in Flickr and Wikipedia Commons. All the images used are have been cropped, and the original uncropped versions are available here.
+                    images found in Flickr and Wikipedia Commons. All the images used have been cropped, and the original uncropped versions are available here.
                 </h3>
 
                 <div class="subheading2 "> You can download  <u>edited images</u>  used on this website by clicking the <span class="white" style="color: #faeded;">Download</span> button.
