fixed wrong image

--- a/Project/images.html
+++ b/Project/images.html
@@ -148,7 +148,7 @@
             <div class="image-list">
                 <ul>
                     <li>
-                        <a href="project Images/Dubov-original.jpg" class="image-link" style="font-weight: 600;"><u>Arjun Erigaisi</u></a>
+                        <a href="project Images/arjun_medium+.jpg" class="image-link" style="font-weight: 600;"><u>Arjun Erigaisi</u></a>
                         <div class="text-sm">
                             <span>
                                 <span class="credits" style="font-weight: 500;">- Frans Peeters,</span>
@@ -205,7 +205,7 @@
                     </li>
 
                     <li>
-                        <a href="project Images/gukesh-original.jpg" class="image-link" style="font-weight: 600;"><u>Praggnanandhaa Rameshbabu</u></a>
+                        <a href="project Images/pragg.jpg" class="image-link" style="font-weight: 600;"><u>Praggnanandhaa Rameshbabu</u></a>
                         <div class="text-sm">
                             <span>
                                 <span class="credits" style="font-weight: 500;">- Frans Peeters,</span>
@@ -438,7 +438,7 @@
                     </li>
 
                     <li>
-                        <a href="project Images/Nepomniachtchi_at_the_World_Blitz_2024.jpg" class="image-link" style="font-weight: 600;"><u>ian Nepomniachtchi</u></a>
+                        <a href="project Images/Nepomniachtchi_at_the_World_Blitz_2024.jpg" class="image-link" style="font-weight: 600;"><u>Ian Nepomniachtchi</u></a>
                         <div class="text-sm">
                             <span>
                                 <span class="credits" style="font-weight: 500;">- HiddenChessMaster123, Wikimedia Commons,</span>          
